Fix design and layout CV page
According to identified changes on phase 2, the layout got fixed.

Layout shift now happens on 1400px, font sizes fits different screen sizes and the cards are more separated from background

--- a/css/cv.css
+++ b/css/cv.css
@@ -106,13 +106,20 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(135deg, #e4efff 0%, #ffffff 100%);
   border-radius: 4px;
   padding: 40px;
   align-items: center;
   margin-top: 40px;
   margin-bottom: 20px;
-  font-size: var(--font-size-cv-p);
+  font-size: var(--font-size-certificate-p);
   text-align: center;
+}
+
+.certificate-card > p,
+.certificate-card > a,
+a > p {
+  background: none;
 }
 
 .certificate-card img {
@@ -127,6 +134,7 @@
     --font-size-cv-h3: 1rem;
     --font-size-cv-h4: 0.9rem;
     --font-size-cv-p: 0.9rem;
+    --font-size-certificate-p: 0.9rem;
   }
 }
 
@@ -138,6 +146,7 @@
     --font-size-cv-h3: 1.2rem;
     --font-size-cv-h4: 1rem;
     --font-size-cv-p: 1rem;
+    --font-size-certificate-p: 1.1rem;
   }
 }
 
@@ -149,6 +158,7 @@
     --font-size-cv-h3: 1.3rem;
     --font-size-cv-h4: 1.1rem;
     --font-size-cv-p: 1.1rem;
+    --font-size-certificate-p: 1.3rem;
   }
 }
 
@@ -160,6 +170,7 @@
     --font-size-cv-h3: 1.4rem;
     --font-size-cv-h4: 1.2rem;
     --font-size-cv-p: 1.2rem;
+    --font-size-certificate-p: 1.2rem;
   }
   .cv-card p,
   .project-card p,
@@ -168,7 +179,7 @@
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 1400px) {
   :root {
     --font-line-height-cv: 36px;
     --font-size-cv-h1: 1.5rem;
@@ -176,6 +187,23 @@
     --font-size-cv-h3: 1.5rem;
     --font-size-cv-h4: 1.3rem;
     --font-size-cv-p: 1.3rem;
+    --font-size-certificate-p: 1.5rem;
+  }
+  .certificate-card {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+
+@media (min-width: 1400px) {
+  :root {
+    --font-line-height-cv: 36px;
+    --font-size-cv-h1: 1.5rem;
+    --font-size-cv-h2: 1.8rem;
+    --font-size-cv-h3: 1.5rem;
+    --font-size-cv-h4: 1.3rem;
+    --font-size-cv-p: 1.3rem;
+    --font-size-certificate-p: 1.3rem;
   }
   .cv-section {
     display: flex;
